fix(button): alignment of FAB + mini anchor btns
Also includes .md-mini documentation

Closes #1607, #2009, #1690

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,12 +1,15 @@
-$button-line-height: 25px !default;
-$button-padding: 2px 6px 3px !default;
+$button-line-height: 2.250rem !default;
+$button-padding: 0 0.375rem !default;
+$button-margin: 0.375rem 0.500rem !default;
 
 // Fab buttons
-$button-fab-width: 56px !default;
-$button-fab-height: 56px !default;
-$button-fab-padding: 16px !default;
-$button-fab-mini-width: 40px !default;
-$button-fab-mini-height: 40px !default;
+$button-fab-width: 3.500rem !default;
+$button-fab-height: 3.500rem !default;
+$button-fab-line-height: 3.500rem !default;
+$button-fab-padding: 1rem !default;
+$button-fab-mini-width: 2.500rem !default;
+$button-fab-mini-height: 2.500rem !default;
+$button-fab-mini-line-height: 2.500rem !default;
 
 $button-fab-toast-offset: $button-fab-height * 0.75;
 
@@ -24,6 +27,7 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
 }
 
 .md-button {
+  box-sizing: border-box;
   color: currentColor;
 
   user-select: none;
@@ -31,8 +35,10 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
 
   outline: none;
   border: 0;
-  padding: 6px;
-  margin: 0;
+  display: inline-block;
+  padding: $button-padding;
+  margin: $button-margin;
+  line-height: $button-line-height;
   background: transparent;
   white-space: nowrap;
 
@@ -45,7 +51,6 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
   font-style: inherit;
   font-variant: inherit;
   font-family: inherit;
-  line-height: inherit;
   text-decoration: none;
 
   cursor: pointer;
@@ -54,6 +59,11 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
   transition: box-shadow $swift-ease-out-duration $swift-ease-out-timing-function,
               background-color $swift-ease-out-duration $swift-ease-out-timing-function;
 
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+  }
   &:focus {
     outline: none;
   }
@@ -94,8 +104,10 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
 
     z-index: $z-index-fab;
 
+    line-height: $button-fab-line-height;
     width: $button-fab-width;
     height: $button-fab-height;
+    vertical-align: middle;
 
     @extend .md-shadow-bottom-z-1;
     border-radius: 50%;
@@ -117,6 +129,7 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
     }
 
     &.md-mini {
+      line-height: $button-fab-mini-line-height;
       width: $button-fab-mini-width;
       height: $button-fab-mini-height;
     }
